--- a/partials/test_partial.mustache
+++ b/partials/test_partial.mustache
@@ -12,6 +12,6 @@
 <body>
   <div>{{test_value}}</div>
   <div id="container"></div>
-  <script type="text/babel" src="/example.js"></script>
+  <script src="/bundle.js"></script>
 </body>
 </html>
